tests/compile_errors/004-not-callable.buzz
| Can't be called
test "Can't be called" {
    int yo = 12;
    yo("mo");
}